compiler/tests/success/risc-v/load.jazz
export
fn load(reg u32 arg) -> reg u32 {
    reg u32 x;
    x = [arg];

    x = [x + 3];
    x = [x - 3];

    reg u32 res;
    res = x;
    return res;
}
