compiler/tests/fail/register_allocation/conflicting_variables.jazz
fn f(reg u64 arg) -> reg u64 {
  reg u64 res;
  res = arg + 3;
  return res;
}

export fn main (reg u64 x) -> reg u64 {
  reg u64 res;
  reg u64 z;
  z = x;
  res = f (z);
  z += res;
  res = z;
  return res;
}
